(fix) update get books of publisher
